static/css/base.css
/* ... */
@media screen and (min-width: 768px) and (max-width: 885px) {
    div.quantcontainer {
        width: 100%;
    }
}

@media screen and (min-width: 320px) and (max-width: 884px) {
    div.quantcontainer,
    div.quantitytitle {
        display: flex;
        justify-content: flex-start;
    }
    div.quantitytitle {
        padding-left: 15px;
    }
    div.addtocart {
        padding-left: 20px;
    }
}

@media screen and (min-width: 885px) {
    div.quantitytitle {
    display: flex;
    justify-content: end;
}
}

@media screen and (max-width: 991px) {
    #delivery-banner h4 {
        font-size: .9rem;
    }

    .btn.btn-outline-black.rounded-0,
    .btn.btn-black.rounded-0 {
        padding: .375rem .375rem;
    }

    .btn.btn-outline-black.rounded-0.btn-lg,
    .btn.btn-black.rounded-0.btn-lg {
        padding: .375rem .375rem;
        font-size: .75rem;
    }

    button.increment-qty, 
    button.decrement-qty {
        padding: .25rem .5rem !important;
    }}

    @media screen and (max-width: 576px) {
        button.increment-qty, 
    button.decrement-qty {
        font-size: 0.5rem;
    }
    }

